# ether

./: .env.example  .gitignore  Cargo.toml  go.mod  go.sum  main.go  package.json  readme.md
api/: Cargo.toml
api/src/: lib.rs
api/src/modules/: mod.rs
api/src/modules/article/: mod.rs
api/src/modules/article/controller/: create.rs  delete.rs  get.rs  list.rs  update.rs
api/src/modules/article/service/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/modules/auth/: current.rs  current_password.rs  login.rs  logout.rs  mod.rs  register.rs
api/src/modules/auth/controller/: current.rs  current_password.rs  login.rs  logout.rs  register.rs
api/src/modules/auth/service/: current.rs  current_password.rs  login.rs  logout.rs  mod.rs  register.rs
api/src/modules/file/: mod.rs
api/src/modules/file/controller/: get.rs  put.rs
api/src/modules/file/service/: get.rs  mod.rs  put.rs
api/src/modules/menu/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/modules/menu/controller/: create.rs  delete.rs  get.rs  list.rs  update.rs
api/src/modules/menu/service/: create.rs  delete.rs  get.rs  list.rs  update.rs
api/src/modules/permission/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/modules/permission/controller/: create.rs  delete.rs  get.rs  list.rs  update.rs
api/src/modules/permission/service/: create.rs  delete.rs  get.rs  list.rs  update.rs
api/src/modules/role/: add_permissions.rs  create.rs  delete.rs  get.rs  list.rs  list_permissions.rs  mod.rs  remove_permissions.rs  update.rs
api/src/modules/role/controller/: add_permissions.rs  create.rs  delete.rs  get.rs  list.rs  list_permissions.rs  mod.rs  remove_permissions.rs  update.rs
api/src/modules/role/service/: add_permissions.rs  create.rs  delete.rs  get.rs  list.rs  list_permissions.rs  remove_permissions.rs  update.rs
api/src/modules/user/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
api/src/modules/user/controller/: create.rs  delete.rs  get.rs  list.rs  update.rs
api/src/modules/user/service/: create.rs  delete.rs  get.rs  list.rs  update.rs
app/: init.go  router.go
app/auth/: router.go
app/auth/controller/: login.go  logout.go  register.go
app/auth/define/: login.go  register.go  sms.go
app/auth/service/: login.go  logout.go  register.go  sms.go
app/auth/utils/: hash.go
app/notice/: init.go  router.go
app/notice/constants/: message.go
app/notice/controller/: message.go
app/notice/define/: message.go
app/notice/domain/: init.go  repository.go
app/notice/model/: message.go  messageText.go
app/notice/service/: message.go
app/notice/utils/: message.go
app/permission/: init.go  router.go
app/permission/controller/: permission.go  role.go  rolePermission.go  userRole.go
app/permission/model/: permission.go  userRole.go
app/permission/service/: permission.go  role.go  rolePermission.go  userRole.go
app/permission/utils/: permission.go  role.go
app/tenant/: init.go  router.go
app/tenant/controller/: tenant.go
app/tenant/define/: tenant.go
app/tenant/domain/: repository.go
app/tenant/model/: tenant.go
app/tenant/service/: tenant.go
app/tenant/utils/: tenant.go
app/user/: init.go  router.go
app/user/constants/: menu.go  user.go
app/user/controller/: menu.go  my.go  permission.go  role.go  roleMenu.go  rolePermission.go  tenant.go  user.go  userRole.go
app/user/define/: menu.go  my.go  permission.go  role.go  roleMenu.go  rolePermission.go  tenant.go  user.go  userRole.go
app/user/domain/: init.go  repository.go  userRepository.go
app/user/model/: menu.go  permission.go  role.go  roleMenu.go  rolePermission.go  tenant.go  user.go  userRole.go
app/user/repository/: tenant.go  user.go
app/user/service/: menu.go  my.go  permission.go  role.go  roleMenu.go  rolePermission.go  tenant.go  user.go  userRole.go
app/user/utils/: menu.go  my.go  permission.go  role.go  roleMenu.go  rolePermission.go  tenant.go  user.go  userRole.go
client/aliyun/: init.go  sms.go
client/casbin/: init.go
client/gorm/: init.go
clients/casbin/: init.go
clients/redis/: init.go
common/: ctx.go  exception.go  model.go  request.go  response.go  sms.go  token.go
conf/: config.example.yml
config/: config.toml.example
docs/: docs.go  swagger.json  swagger.yaml
domain/: Cargo.toml
domain/notice/: message.go  repository.go
domain/src/: lib.rs
domain/src/entity/: article.rs  menu.rs  mod.rs  prelude.rs  role.rs  user.rs
domain/tenant/: repository.go  tenant.go
domain/user/: repository.go  user.go
entity/src/: role_menu.rs  user.rs  user_role.rs
middleware/: auth.go  error.go  tenant.go
migration/src/: lib.rs  m20241002_020949_init_user.rs  m20241019_115953_init_menu.rs  m20241020_024913_init_role_menu.rs  m20241020_025112_init_user_role.rs  m20250202_010302_init_article.rs  m20250208_014055_init_permission_data.rs
src/: app.module.ts  main.rs
src/auth/: auth.module.ts
src/auth/controller/: auth.controller.ts
src/auth/dto/: login-email.input.ts  login-username.input.ts  register.input.ts
src/auth/service/: auth.service.ts
src/user/: user.module.ts
src/user/controller/: user.controller.ts
src/user/dto/: create-user.input.ts  update-user.input.ts  users.args.ts
src/user/entities/: user.entity.ts  user.interface.ts
src/user/resolver/: user.resolver.spec.ts  user.resolver.ts
src/user/service/: user.service.ts
utils/: Cargo.toml  conf.go  ctx.go  env.go  init.go  jwt.go  permission.go  sms.go  validator.go
utils/src/: config.rs  db.rs  env.rs  hash.rs  identity.rs  jwt.rs  lib.rs  logger.rs  redis.rs  request.rs  response.rs  s3.rs  xtime.rs
utils/src/cache/: login.rs
utils/src/casbin/: adapter.rs  mod.rs  model.rs
utils/src/middleware/: catch_panic.rs  jwt.rs  log.rs  mod.rs  tracing.rs
