[package]
name = "ether-salvo-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "entity", "migration", "utils"]

[workspace.dependencies]
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
salvo = { version = "0.74.3", features = ["oapi", "cors"] }
serde = { version = "1.0.216", features = ["derive"] }
tracing = "0.1.41"
redis = "0.27.6"
chrono = "0.4.39"
casbin = { version = "2.5.0", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.42.0", features = ["fs", "io-util", "macros"] }


[dependencies]
api = { path = "api" }
entity = { path = "entity" }
migration = { path = "migration" }
utils = { path = "utils" }
