[package]
name = "manage-background-svc"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "api", "domain", "migration", "utils"]

[workspace.dependencies]
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
salvo = { version = "0.76.2", features = ["oapi", "cors"] }
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
redis = { version = "0.29.1", features = ["r2d2", "cluster", "cluster-async", "tokio-comp"]}
chrono = "0.4.40"
casbin = { version = "2.10.1", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.43.0", features = ["full", "fs", "io-util", "macros"] }

[dependencies]
api = { path = "api" }
domain = { path = "domain" }
migration = { path = "migration" }
utils = { path = "utils" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
clap = "4.5.31"
