[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
entity = { path = "../entity" }

salvo = { workspace = true, features = ["oapi", "cors"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
validator = { version = "0.19.0", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
redis = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
casbin = { workspace = true, default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
serde_json = "1.0.133"
