[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
sea-orm = { workspace = true, features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
redis = { version = "0.27.6", features = ["r2d2", "tokio-comp"]}
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
jsonwebtoken = "9.3.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.133"
salvo = "0.74.3"
nanoid = "0.4.0"
md-5 = "0.10.6"
rand = "0.8.5"
sha1 = "0.10.6"
sha2 = "0.10.8"
bcrypt = "0.16.0"
const-hex = "1.14.0"
digest = "0.10.7"
hmac = "0.12.1"
hostname = "0.4.0"
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.5.1"
time = "0.3.37"
anyhow = "1.0.94"
